<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_message"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_accion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTerror"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnTerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_terror"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnComedia"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/btnComedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_comedia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFiccion"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnFiccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_ficcion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDrama"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnDrama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/btn_drama"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="26dp" />


</androidx.constraintlayout.widget.ConstraintLayout>